--- a/legis.ipynb
+++ b/legis.ipynb
@@ -10,11 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from model.models import Base, session, engine, Parti, Candidat, CandidatParti, ResultatCondidatParti, ResultatMetaInfo, UrneVote"
@@ -30,11 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Base.metadata.drop_all(bind=engine)\n",
@@ -51,16 +43,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from glob import glob\n",
-    "import pandas as ps\n",
-    "import os\n"
+    "import pandas as ps"
    ]
   },
   {
@@ -69,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = glob(\"data/presi/*.csv\")"
+    "files = glob(\"data/legis/*.csv\")"
    ]
   },
   {
@@ -183,7 +170,8 @@
     "            circonscription=row['circonscription'], \n",
     "            region_id=row['region_id'],\n",
     "            annee=year,\n",
-    "            final_round=is_final\n",
+    "            final_round=is_final,\n",
+    "            is_legis=False\n",
     "        )\n",
     "        session.add(urne_Vote)\n",
     "        session.flush()\n",
@@ -288,7 +276,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
    "outputs": [],
    "source": [
     "for file in files:\n",
